tests/enum_from/compile_fail/container/name_value_attribute.rs
use enum_convert::EnumFrom;

enum Source {
    Unit,
}

#[derive(EnumFrom)]
#[enum_from = "Source"] // Should be #[enum_from(Source)]
enum Target {
    Unit,
}

fn main() {}
